# solar-dynamics-observatory

./: .readthedocs.yml  README.md  pyproject.toml
.github/workflows/: black.yml
docs/: conf.py  index.rst  refs.bib
sdo/: __init__.py
